--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -145,7 +145,7 @@
                 <img name="repressilator" src="../static/images/frame/Repressilator-Hg-MerR-TetR-Cl_lambda.png">
             </div>
             <div class="right">
-                <p>hehe</p>
+                <p>If you choose repressilator, your previous configuration will be deleted. Are you sure to make this change?</p>
             </div>
         </div>
         <div class="actions">
