--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}simulation{% endblock %}
 {% block css %}
-  <link rel="stylesheet" type="text/css" href="/static/css/simulation.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/simulation.css" />
 {% endblock %}
 {% block content %}
 <div id="simulation_wrap">
@@ -152,4 +152,5 @@
 {% block script %}
   <script type="text/javascript" src="/static/js/ichart.1.2.min.js" ></script>
   <script type="text/javascript" src="/static/js/simulation.js" ></script>
+  <script type="text/javascript" src="/static/js/simulation-ajax.js" ></script>
 {% endblock %}
