--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -138,6 +138,28 @@
     <div class="ui slider checkbox truthele">
         <input type="checkbox" name="truth"><label></label>
     </div>
+    <div class="ui basic small modal" id="warning">
+        <i class="close icon"></i>
+        <div class="header">
+            Warning
+        </div>
+        <div class="content">
+            <div class="left">
+                <i class="massive warning icon"></i>
+            </div>
+            <div class="right">
+                <p id="warnmessage"></p>
+            </div>
+        </div>
+        <div class="actions">
+            <div class="one fluid ui buttons"> 
+                <div class="ui positive right labeled icon button">
+                    OK
+                    <i class="checkmark icon"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="ui basic small modal" id="repressilator">
         <i class="close icon"></i>
         <div class="header">
