--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -153,7 +153,7 @@
         </div>
         <div class="actions">
             <div class="one fluid ui buttons"> 
-                <div class="ui positive right labeled icon button">
+                <div class="ui negative right labeled icon button">
                     OK
                     <i class="checkmark icon"></i>
                 </div>
