--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -4,7 +4,7 @@
 {%endblock css %}
 {%block content %}
 <div id="circuits">
-    <div class="ui button" id="upload"></div>
+    <div class="ui button" id="upload">Complete</div>
     <ul> 
         <div id="addCircuit" class="ui button" style="background:none"><i class="big expand icon"></i></div>
     </ul>
