--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -5,6 +5,15 @@
 <link rel="stylesheet" type="text/css" href="../static/css/shape.css">
 {%endblock css%}
 {%block content %}
+<div class="ui segment blackglass" id="information">
+    <div class="ui button hide"><i class="remove icon"></i></div>
+    <div class="ui ribbon label title">Part_id</div>
+    <p name="pid"><p>
+    <div class="ui ribbon label title">Part_short_name</div>
+    <p name="sname"><p>
+    <div class="ui ribbon label title">Part_short_desc</div>
+    <p name="desc"><p>
+</div>
 <div class="teal ui four fluid buttons" id="change">
   <div class="ui button active" name="device">Device</div>
   <div class="ui button" name="parts">Parts</div>
