--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -1,14 +1,23 @@
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  /*height: 780px;*/
-  height:100%;
-  font-family: Arial, '宋体';
-  /*font-size: 14px;*/
-  /*background-image:-webkit-linear-gradient(top left, black, gray, rgb(142, 110, 110));*/
-  background-image:-webkit-linear-gradient(top left, #192124, #808688, #38312f);
-  /*background-image:-webkit-linear-gradient(top left, #192124, #808688, #192124);*/
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    /*height: 780px;*/
+    height:100%;
+    font-family: Arial, '宋体';
+    /*font-size: 14px;*/
+    /*background-image:-webkit-linear-gradient(top left, black, gray, rgb(142, 110, 110));*/
+    background-image:-webkit-linear-gradient(top left, #192124, #808688, #38312f);
+    /*background-image:-webkit-linear-gradient(top left, #192124, #808688, #192124);*/
+    -webkit-backface-visibility: hidden;  
+}
+
+.modal-active {
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);
 }
 
 a {
@@ -16,39 +25,39 @@ a {
 }
 
 .operate{
-	width: 100%;
-	/*height: 87%;*/
+    width: 100%;
+    /*height: 87%;*/
     height:700px;
     margin: 1% 0 .5% 0;
     background:none;
 }
 .input .popup{
-	color: red;
+    color: red;
 }
 .sidebar .icon.remove{
-	position: absolute;
-	color: #CC181E;
-	font-size: 25px;
-	right: 0;
-	top: 5px;
-	margin: 0;
-	z-index: 1;
-	transition: color .2s;
-	cursor: pointer;
+    position: absolute;
+    color: #CC181E;
+    font-size: 25px;
+    right: 0;
+    top: 5px;
+    margin: 0;
+    z-index: 1;
+    transition: color .2s;
+    cursor: pointer;
 }
 .sidebar .icon.remove:hover{
-	color: #F6292F;
+    color: #F6292F;
 }
 
 .ui.popup{
-	z-index: 1000;
+    z-index: 1000;
 }
 .ui.button{
-	text-transform: capitalize;
+    text-transform: capitalize;
 }
 
 .main {
-	background: none;
+    background: none;
     height: 100%;
     width: 95%;
     margin:0 auto;
@@ -64,35 +73,35 @@ a {
 
 
 .dock {
-	position: relative; 
-	height: 200px; 
-	text-align: center;
+    position: relative; 
+    height: 200px; 
+    text-align: center;
 }
 
 /* dock2 - bottom */
 .dock-container2 {
-	position: absolute;
-	height: 200px;
-	padding-left: 20px;
+    position: absolute;
+    height: 200px;
+    padding-left: 20px;
 }
 a.dock-item2 {
-	display: block; 
-	font: bold 12px Arial, Helvetica, sans-serif;
-	width: 150px; 
-	color: #000; 
-	bottom: 0px; 
-	position: absolute;
-	text-align: center;
-	text-decoration: none;
+    display: block; 
+    font: bold 12px Arial, Helvetica, sans-serif;
+    width: 150px; 
+    color: white; 
+    bottom: 0px; 
+    position: absolute;
+    text-align: center;
+    text-decoration: none;
 }
 .dock-item2 span {
-	display: none;
-	padding-left: 20px;
+    display: none;
+    padding-left: 20px;
 }
 .dock-item2 img {
-	border: none; 
-	margin: 5px 10px 0px; 
-	width: 100%; 
+    border: none; 
+    margin: 5px 10px 0px; 
+    width: 100%; 
 }
 
 #indexmenu,
