center css bug in shape

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -13,7 +13,7 @@
         {% block css %}{% endblock %}
     </head>
     <body> 
-        <div class="page">
+        <div id="page">
             <div class="ui black huge launch right attached button" id="showIndex">
                 <i class="icon list layout"></i><span class="text" style="display:none;">name</span>
             </div>
