--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -92,6 +92,7 @@ a.dock-item2 {
     position: absolute;
     text-align: center;
     text-decoration: none;
+    cursor:pointer;
 }
 .dock-item2 span {
     display: none;
