--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -134,7 +134,7 @@
         <div class="ui items" id="recommendlogics">
         </div>
         <div class="actions">
-            <div class="ui positive right labeled icon button">Confirm<i class="checkmark icon"></i></div>
+            <div class="ui teal positive right labeled icon button">Confirm<i class="checkmark icon"></i></div>
         </div>
     </div>
     <div class="ui slider checkbox truthele">
