--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -77,11 +77,11 @@
                 <div class="center">
                     <div class="dock" id="dock2">
                         <div class="dock-container2" style="left: 376px; width: 400px;">
-                            <a class="dock-item2" style="width: 150px; left: 0px;"><span style="display: block;">Design</span><img src="../static/images/CSS Dock Menu_files/home.png" alt="home"></a>
-                            <a class="dock-item2" style="width: 150px; left: 150px;"><span style="display: none;">Display</span><img src="../static/images/CSS Dock Menu_files/email.png" alt="contact"></a>
-                            <a class="dock-item2" style="width: 150px; left: 300px;"><span style="display: none;">Simulation</span><img src="../static/images/CSS Dock Menu_files/portfolio.png" alt="portfolio"></a>
-                            <a class="dock-item2" style="width: 150px; left: 450px;"><span style="display: none;">Experiment</span><img src="../static/images/CSS Dock Menu_files/music.png" alt="music"></a>
-                            <a class="dock-item2" style="width: 150px; left: 600px;"><span style="display: none;">Help</span><img src="../static/images/CSS Dock Menu_files/video.png" alt="video"></a>
+                            <a class="dock-item2" style="width: 150px; left: 0px;"><span style="display: block;">Design</span><img src="../static/images/indexicon/1.png" alt="home"></a>
+                            <a class="dock-item2" style="width: 150px; left: 150px;"><span style="display: none;">Display</span><img src="../static/images/indexicon/2.png" alt="contact"></a>
+                            <a class="dock-item2" style="width: 150px; left: 300px;"><span style="display: none;">Simulation</span><img src="../static/images/indexicon/3.png" alt="portfolio"></a>
+                            <a class="dock-item2" style="width: 150px; left: 450px;"><span style="display: none;">Experiment</span><img src="../static/images/indexicon/4.png" alt="music"></a>
+                            <a class="dock-item2" style="width: 150px; left: 600px;"><span style="display: none;">Help</span><img src="../static/images/indexicon/5.png" alt="video"></a>
                         </div>
                     </div>
                 </div>
