--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -25,7 +25,8 @@
     <div class="content">
         <div class="center">
             <div class="black progress">
-                <div class="bar"></div>
+                <div class="bar"><span></span></div>
+                <div class="ui large text loader">Loading...</div>
             </div>
         </div>
     </div>
