--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -47,18 +47,15 @@ width:100%;}
 
 .progress {
     width:100%;
-    height:30px;
+    height:1px;
 }
 
 .progress .bar {
+    top:0px;
+    position:fixed;
     width:0;
-    height:23px;
-    float:left;
-    background-color:rgb(95, 200, 201);
-}
-
-.ui-progressbar-value {
-    background:green !important;
+    height:2px;
+    background-color:#10cdcc;
 }
 
 #vector {
@@ -94,24 +91,24 @@ width:100%;}
 }
 
 /*.main .ui.segment {
-    height:100%;
-    width:100%;
-    overflow:auto;
-    background-color: rgba(95, 200, 201, 0.1);
+height:100%;
+width:100%;
+overflow:auto;
+background-color: rgba(95, 200, 201, 0.1);
 }*/
 
-.center .ui.segment { 
-    background-color: rgba(0, 0, 0, 0);
-}
+    .center .ui.segment { 
+        background-color: rgba(0, 0, 0, 0);
+    }
 
 
-.ui.segment.part {
-    position:relative;
-    height:150px;
-    width:90%;
-    margin:50px auto 50px auto;
-    /*padding:30px;
-    padding-left:0;*/
+    .ui.segment.part {
+        position:relative;
+        height:150px;
+        width:90%;
+        margin:50px auto 50px auto;
+        /*padding:30px;
+        padding-left:0;*/
     float:center;
     background-color: rgba(95, 200, 201, 0.1);
 }
@@ -130,47 +127,47 @@ width:100%;}
 }
 
 /*.main {
-    padding:10px;
+padding:10px;
 }*/
 
-.part-container > div {
-    width:0px;
-    height:90%;
-}
+    .part-container > div {
+        width:0px;
+        height:90%;
+    }
 
-.ui.ribbon.label.title {
-    border-color:#E8E8E8 !important;
-}
+    .ui.ribbon.label.title {
+        border-color:#E8E8E8 !important;
+    }
 
-#information {
-    position:fixed!important;
-    bottom:0;
-    right:0;
-    width:300px;
-    color:white;
-    z-index:10000;
-    display:none;
-}
+    #information {
+        position:fixed!important;
+        bottom:0;
+        right:0;
+        width:300px;
+        color:white;
+        z-index:10000;
+        display:none;
+    }
 
-#information > .hide {
-    width:10px;
-    height:10px;
-    position:absolute;
-    right:0;
-    top:0;
-    background:none!important;
-}
+    #information > .hide {
+        width:10px;
+        height:10px;
+        position:absolute;
+        right:0;
+        top:0;
+        background:none!important;
+    }
 
-#information > p {
-    margin-top:5px;
-    margin-bottom:5px;
-}
+    #information > p {
+        margin-top:5px;
+        margin-bottom:5px;
+    }
 
-#information .label {
-    text-align:center;
-    background:rgba(157, 183, 187, 1) !important;
-}
+    #information .label {
+        text-align:center;
+        background:rgba(157, 183, 187, 1) !important;
+    }
 
-#information .label:after {
-    border-right-color:rgba(157, 183, 187, 1) !important;
-}
+    #information .label:after {
+        border-right-color:rgba(157, 183, 187, 1) !important;
+    }
