--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -90,27 +90,21 @@ width:100%;}
     padding:0; 
 }
 
-/*.main .ui.segment {
-height:100%;
-width:100%;
-overflow:auto;
-background-color: rgba(95, 200, 201, 0.1);
-}*/
-
-    .center .ui.segment { 
-        background-color: rgba(0, 0, 0, 0);
-    }
+.center .ui.segment { 
+    background-color: rgba(0, 0, 0, 0);
+}
 
 
-    .ui.segment.part {
-        position:relative;
-        height:150px;
-        width:90%;
-        margin:50px auto 50px auto;
-        /*padding:30px;
-        padding-left:0;*/
+.ui.segment.part {
+    position:relative;
+    height:150px;
+    width:90%;
+    margin:50px auto 50px auto;
+    /*padding:30px;
+    padding-left:0;*/
     float:center;
     background-color: rgba(95, 200, 201, 0.1);
+    overflow:hidden;
 }
 
 .part-container {
@@ -118,17 +112,13 @@ background-color: rgba(95, 200, 201, 0.1);
     height:100px;
     margin:10px 0 auto 0px;
     float:right;
-    overflow:auto;
+    overflow-y:hidden;
 }
 
 .title {
     font-size:30px;
     text-align:center;
 }
-
-/*.main {
-padding:10px;
-}*/
 
     .part-container > div {
         width:0px;
