--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -47,7 +47,7 @@ width:100%;}
 
 .progress {
     width:100%;
-    height:1px;
+    height:2px;
 }
 
 .progress .bar {
@@ -120,44 +120,54 @@ width:100%;}
     text-align:center;
 }
 
-    .part-container > div {
-        width:0px;
-        height:90%;
-    }
+.part-container > div {
+    width:0px;
+    height:90%;
+}
 
-    .ui.ribbon.label.title {
-        border-color:#E8E8E8 !important;
-    }
+.ui.ribbon.label.title {
+    border-color:#E8E8E8 !important;
+}
 
-    #information {
-        position:fixed!important;
-        bottom:0;
-        right:0;
-        width:300px;
-        color:white;
-        z-index:10000;
-        display:none;
-    }
+#information {
+    position:fixed!important;
+    bottom:0;
+    right:0;
+    width:300px;
+    color:white;
+    z-index:10000;
+    display:none;
+}
 
-    #information > .hide {
-        width:10px;
-        height:10px;
-        position:absolute;
-        right:0;
-        top:0;
-        background:none!important;
-    }
+#information > .hide {
+    width:10px;
+    height:10px;
+    position:absolute;
+    right:0;
+    top:0;
+    background:none!important;
+}
 
-    #information > p {
-        margin-top:5px;
-        margin-bottom:5px;
-    }
+#information > p {
+    margin-top:5px;
+    margin-bottom:5px;
+}
 
-    #information .label {
-        text-align:center;
-        background:rgba(157, 183, 187, 1) !important;
-    }
+#information .label {
+    text-align:center;
+    background:rgba(157, 183, 187, 1) !important;
+}
 
-    #information .label:after {
-        border-right-color:rgba(157, 183, 187, 1) !important;
-    }
+#information .label:after {
+    border-right-color:rgba(157, 183, 187, 1) !important;
+}
+
+#progress .content {
+    background:rgba(0, 0, 0, 0)!important;
+    width:100%;
+}
+
+#progress .content .center {
+    background:none!important;
+    width:100%;
+}
