--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -15,13 +15,13 @@
     <p name="desc"><p>
 </div>
 <div class="teal ui four fluid buttons" id="change">
-  <div class="ui button active" name="device">Device</div>
-  <div class="ui button" name="parts">Parts</div>
-  <div class="ui button" name="vector">Vector</div>
-  <div class="ui button" name="dna">DNA</div>
+    <div class="ui button active" name="device">Device</div>
+    <div class="ui button" name="parts">Parts</div>
+    <div class="ui button" name="vector">Vector</div>
+    <div class="ui button" name="dna">DNA</div>
 </div>
 <div id="slider"></div>
-<div class="ui page active dimmer blackglass">
+<div class="ui basic modal" id="progress">
     <div class="content">
         <div class="center">
             <div class="black progress">
@@ -36,29 +36,29 @@
         <div class="active dna side">
             <div class="content">
                 <div class="center">
-                  <div id="dna_container">
-                    <div id="dna_main">
-                      <div id="dna_header">
-                      </div><!-- end of dna_header -->
-                      <div id="dna_content">
-                      </div> <!-- end of dna_content -->
-                    </div> <!-- end of dna_main -->
-                    <div id="dna_aside">
-                      <button type="button" class="medium ui button">Export</button>
-                      <button type="button" id="comment_button" class="medium ui button">Comment</button>
-                    </div> <!-- end of dna_aside -->
-                  </div> <!-- end of dna_container -->
-                  <!--modal box-->
-                  <div id="dna_modal_box">
-                    <div>
-                      <i class="remove icon"></i>
-                      <p>21-8-2014 at: 19:32:49</p>
-                      <i class="trash icon"></i>
-                    </div>
-                    <div class="ui input">
-                      <input type="text" placeholder="scott">
-                    </div>
-                  </div> <!-- end of dna_modal_box -->
+                    <div id="dna_container">
+                        <div id="dna_main">
+                            <div id="dna_header">
+                            </div><!-- end of dna_header -->
+                            <div id="dna_content">
+                            </div> <!-- end of dna_content -->
+                        </div> <!-- end of dna_main -->
+                        <div id="dna_aside">
+                            <button type="button" class="medium ui button">Export</button>
+                            <button type="button" id="comment_button" class="medium ui button">Comment</button>
+                        </div> <!-- end of dna_aside -->
+                    </div> <!-- end of dna_container -->
+                    <!--modal box-->
+                    <div id="dna_modal_box">
+                        <div>
+                            <i class="remove icon"></i>
+                            <p>21-8-2014 at: 19:32:49</p>
+                            <i class="trash icon"></i>
+                        </div>
+                        <div class="ui input">
+                            <input type="text" placeholder="scott">
+                        </div>
+                    </div> <!-- end of dna_modal_box -->
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                         <div id="vector"></div>
                     </div>
                 </div>
-          </div>
+            </div>
         </div>
         <div class="parts side">
             <div class="content">
