--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -36,7 +36,7 @@
         <div class="active dna side">
             <div class="content">
                 <div class="center">
-                    <div id="dna_container">
+                    <div class="ui segment glass" id="dna_container">
                         <div id="dna_main">
                             <div id="dna_header">
                             </div><!-- end of dna_header -->
@@ -44,16 +44,16 @@
                             </div> <!-- end of dna_content -->
                         </div> <!-- end of dna_main -->
                         <div id="dna_aside">
-                            <button type="button" class="medium ui button">Export</button>
-                            <button type="button" id="comment_button" class="medium ui button">Comment</button>
+                            <button type="button" class="ui teal button">Export</button>
+                            <button type="button" id="comment_button" class="ui teal button">Comment</button>
                         </div> <!-- end of dna_aside -->
                     </div> <!-- end of dna_container -->
                     <!--modal box-->
-                    <div id="dna_modal_box">
+                    <div class="ui segment blackglass" id="dna_modal_box">
                         <div>
                             <i class="remove icon"></i>
                             <p>21-8-2014 at: 19:32:49</p>
-                            <i class="trash icon"></i>
+                            <!--i class="trash icon"></i-->
                         </div>
                         <div class="ui input">
                             <input type="text" placeholder="scott">
