--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -1,4 +1,5 @@
 {%extends "layout.html"%}
+{% block title %}Design{% endblock %}
 {%block css %}
 <link rel="stylesheet" type="text/css" href="../static/css/circuit.css">
 {%endblock css %}
