--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -15,7 +15,7 @@
     <body> 
         <div id="page">
             <div class="ui black huge launch right attached button" id="showIndex">
-                <i class="icon list layout"></i><span class="text" style="display:none;">name</span>
+                <i class="icon list layout"></i><span class="text">FLAME</span>
             </div>
             <div class="operate">
                 <div class="main">
