--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -1,5 +1,5 @@
 {%extends "layout.html"%}
-{% block title %}Shape{% endblock %}
+{% block title %}Display{% endblock %}
 {%block css %}
 <link rel="stylesheet" type="text/css" href="static/css/dna.css">
 <link rel="stylesheet" type="text/css" href="../static/css/shape.css">
